# docs/swagger.json
@@ -110,7 +110,7 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Зарегистрировать пользователя",
+                "summary": "Зарегистрировать нового пользователя",
                 "parameters": [
                     {
                         "description": "Данные пользователя",
@@ -124,13 +124,31 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Created",
+                        "description": "Пользователь успешно зарегистрирован",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.AuthResponse"
                         }
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Неверный формат запроса / тело запроса",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Ошибка авторизации",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "409": {
+                        "description": "Пользователь с таким именем уже существует",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
@@ -220,7 +238,7 @@
                 "tags": [
                     "Course"
                 ],
-                "summary": "Получить курс",
+                "summary": "Получить курс по ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -245,6 +263,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
@@ -307,6 +331,12 @@
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -339,7 +369,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Курс успешно удалён"
                     },
                     "400": {
                         "description": "Bad Request",
@@ -349,6 +379,12 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
@@ -411,6 +447,43 @@
             }
         },
         "/question": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Question"
+                ],
+                "summary": "Получить все вопросы",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/diprec_api_internal_domain.QuestionResponse"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -726,7 +799,7 @@
                         "required": true
                     },
                     {
-                        "description": "Название, описание и дедлайн курса",
+                        "description": "Название, описание и дедлайн теста",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -744,6 +817,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
@@ -877,10 +956,68 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "Вопрос прикреплен"
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/diprec_api_internal_domain.Error"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Test"
+                ],
+                "summary": "Открепить вопрос от теста",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID теста",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "ID вопроса для удаления",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/internal_transport_http_test.RemoveQuestionDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Вопрос откреплён"
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
                         "schema": {
                             "$ref": "#/definitions/diprec_api_internal_domain.Error"
                         }
@@ -1250,6 +1387,17 @@
                 },
                 "name": {
                     "type": "string"
+                }
+            }
+        },
+        "internal_transport_http_test.RemoveQuestionDTO": {
+            "type": "object",
+            "required": [
+                "questionId"
+            ],
+            "properties": {
+                "questionId": {
+                    "type": "integer"
                 }
             }
         },
